[gd_scene load_steps=3 format=3 uid="uid://do4ilbdtr0dih"]

[ext_resource type="Script" path="res://scripts/GameManager.gd" id="1_ig7tw"]
[ext_resource type="Script" path="res://scripts/NetworkManager.gd" id="2_ig7tw"]

[node name="Main" type="Node2D"]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_ig7tw")

[node name="NetworkManager" type="Node" parent="."]
script = ExtResource("2_ig7tw")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ConnectionPanel" type="Panel" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/ConnectionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Title" type="Label" parent="UI/ConnectionPanel/VBoxContainer"]
layout_mode = 2
text = "Cooperative Puzzle Game"
horizontal_alignment = 1

[node name="ServerInput" type="LineEdit" parent="UI/ConnectionPanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Server URL (default: ws://localhost:3080)"

[node name="ConnectButton" type="Button" parent="UI/ConnectionPanel/VBoxContainer"]
layout_mode = 2
text = "Connect to Global Lobby"

[node name="StatusLabel" type="Label" parent="UI/ConnectionPanel/VBoxContainer"]
layout_mode = 2
text = "Not connected"
horizontal_alignment = 1

[node name="GameUI" type="CanvasLayer" parent="."]
visible = false

[node name="LevelInfo" type="Label" parent="GameUI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
text = "Level: 1"
horizontal_alignment = 2

[node name="SkipButton" type="Button" parent="GameUI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 80.0
offset_right = -20.0
offset_bottom = 110.0
text = "Skip Level"
